       it makes sense. See issue #177. (Stefan)
- NEW: Rebuilding the icon cache can be done by calling TortoiseProc from
       the command line. See our help files for details. (Stefan)
- NEW: Setting the environment variable SVN_ASP_DOT_NET_HACK makes TSVN
       use '_svn' as the Subversion admin dirs instead of '.svn'.
       A restart of Windows is required for this to take effect. (Stefan)
- CHG: The date filter in the log dialog now prevents the user from selecting
       dates outside the shown log messages. (Michael Dietschi)
- CHG: Warn if user selects files inside an added folder to create a patch.
       Subversion and patch doesn't support this. (Stefan)
- CHG: Ctrl-A now selects all entries in the file list controls. (Stefan)
- CHG: "Show log" in the file list controls for all versioned files.
       See issue #172. (Stefan)
- CHG: Missing files are not selected by default anymore in the commit
       dialog. (Stefan)
- CHG: Ctrl-click expands the whole tree in the repository browser. (Stefan)
- BUG: The status cache didn't watch all required paths. (Stefan)
- BUG: When files were added to the ignore list, a choice of 
       File.ext or *.ext is given. If the *.ext is chosen the dialog 
       box told that File.ext was successfully added instead of *.ext. (Stefan)
- BUG: The selection isn't lost anymore when right clicking in the commit
       message edit box. See issue #176. (Stefan)
- BUG: After a merge which produced conflicts, the context menu wasn't
       shown with the entries to resolve the conflict. (Stefan)
- BUG: Sorting by date in the repository browser didn't work. (Stefan)
- BUG: Creating a patch from files was disabled, it only worked
       from folders. (Stefan)
- BUG: The 'mark as resolved' and 'save' buttons were enabled even
       if TortoiseMerge was started from the 'Check for modifications'
       dialog. See issue #178. (Stefan)

Version 1.2.4
- BUG: TortoisePlink was unable to connect to svn+ssh. (Stefan)

Version 1.2.3